--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,15 +5,10 @@
     "target": "es5",
     "noImplicitAny": false,
     "sourceMap": true,
-    "outDir": "build",
+    "outDir": "dist",
     "baseUrl": "src",
     "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "src/**/*",
-  ],
-  "exclude": [
-    "node_modules",
-    "build"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
