--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,8 +12,14 @@
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "isolatedModules": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
