--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,10 +5,10 @@
     "target": "es5",
     "noImplicitAny": false,
     "sourceMap": true,
-    "outDir": "dist",
+    "outDir": "build",
     "baseUrl": "src",
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "build"]
 }
