--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,9 @@
     "@types/express": "^4.17.8",
     "cors": "^2.8.5",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
   }
 }
